@@ -45,7 +45,7 @@ dependencies {
         exclude group: 'org.apache.tomcat'
     }
     compile 'org.openforis.android:android-spring:1.0-Alpha2'
-    compile 'org.sqldroid:sqldroid:1.0.0.RC10.1'
+    compile 'org.sqldroid:sqldroid:1.0.3'
     compile 'org.slf4j:slf4j-android:1.6.1-RC1'
     compile 'org.openforis.android:android-liquibase-core:2.0.6-Alpha2'
     compile 'org.slf4j:slf4j-android:1.6.1-RC1'
