@@ -19,6 +19,7 @@
     <application
             android:name="android.support.multidex.MultiDexApplication"
             android:allowBackup="true"
+            android:largeHeap="true"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
             android:theme="@style/AppTheme"
